added get all members
