# internal/model/Account.go
@@ -17,3 +17,17 @@ type AccountReq struct {
 	// required: true
 	Account Account
 }
+
+// AccountResponse comments response
+type AccountResponse struct {
+	Accounts []Account `json:"accounts"`
+}
+
+// AccountResWrapperv wrapper struct for AccountResponse
+//
+// swagger:response AccountResponse
+type AccountResWrapper struct {
+	// in: body
+	// required: true
+	AccountResponse AccountResponse
+}
